...
    "16. Aug. 2026" : {

    },
    "Ab %lld:00 Uhr" : {

    },
    "Abbrechen" : {

    },
    "Abbuchung" : {

    },
    "Achte auf dein Budget" : {
...
    "Buchung hinzufügen" : {

    },
    "Buchung löschen?" : {

    },
    "Buchungen" : {

    },
    "Buchungen aufrunden" : {

    },
    "Buchungen ausprobieren" : {
...
    "Buchungen durchsuchen" : {

    },
    "Buchungen suchen" : {

    },
    "Buchungsaktionen" : {

    },
    "Buchungsart" : {

    },
    "Buchungstyp" : {
...
    "Budget öffnen" : {

    },
    "Budget überschritten" : {

    },
    "Budgetaktionen" : {

    },
    "Budgetbereich" : {

    },
    "Budgetbereich %@" : {
...
    "Budgetbereiche" : {

    },
    "Budgetname" : {

    },
    "Budgets" : {

    },
    "Budgets verwalten" : {

    },
    "Budgetstatus" : {

    },
    "Budgetübersicht" : {

    },
    "CSV exportieren" : {

    },
    "CSV importieren" : {

    },
    "CSV- und PDF-Export" : {
...
        }
      }
    },
    "Name" : {

    },
    "Neue Buchung" : {

    },
    "Neue Buchung erstellen" : {

    },
    "Neue Fixkosten" : {
...
    "Neuen Bereich hinzufügen" : {

    },
    "Neuer Bereich" : {

    },
    "Neues Budget" : {

    },
    "Neues Budget erstellen" : {

    },
    "Neues Element" : {
...
